--- a/src/module.scss
+++ b/src/module.scss
@@ -6,6 +6,7 @@ $red: #1050b3;
 $white: #fefefe;
 $gray: #444;
 $lightGray: lighten($gray, 30);
+$headerBlack: #1f1c1a;
 
 $transitionDuration: .3s;
 $transition: all $transitionDuration ease-in-out;
